workspace/artifact/tests/bad1.anchor


class Bad {
  volatile int y moves_as isLocal(this) ? B : N;
  public void inc()  {
    this.y = this.y + 1;  // error: two non-mover accesses
  }
}

